envoy-gateway/http-connect/connect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  hostnames:
    - "example.com"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: connect
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: eg
  httpUpgrade:
    - type: CONNECT
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: connect
spec:
  httpUpgrade:
    - type: CONNECT
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: eg
  http2:
    allowConnect: true
---
